@@ -55,7 +55,6 @@ C_SRC =	\
 			chat.c \
 			data.c \
 			disco.c \
-			facebook_roster.c \
 			google/gmail.c \
 			google/google.c \
 			google/google_presence.c \
