@@ -677,7 +677,7 @@ create_protocols_menu(const char *default_proto_id)
 	GdkPixbuf *pixbuf = NULL;
 	GtkSizeGroup *sg;
 	GList *p;
-	const char *gtalk_name = NULL, *facebook_name = NULL;
+	const char *gtalk_name = NULL;
 	int i;
 
 	aop_menu = g_malloc0(sizeof(AopMenu));
@@ -688,7 +688,6 @@ create_protocols_menu(const char *default_proto_id)
 
 	if (purple_find_prpl("prpl-jabber")) {
 		gtalk_name = _("Google Talk");
-		facebook_name = _("Facebook (XMPP)");
 	}
 
 	for (p = purple_plugins_get_protocols(), i = 0;
@@ -717,29 +716,6 @@ create_protocols_menu(const char *default_proto_id)
 				aop_menu->default_item = i;
 
 			gtalk_name = NULL;
-			i++;
-		}
-
-		if (facebook_name && strcmp(facebook_name, plugin->info->name) < 0) {
-			char *filename = g_build_filename(DATADIR, "pixmaps", "pidgin", "protocols",
-			                                  "16", "facebook.png", NULL);
-			GtkWidget *item;
-
-			pixbuf = pidgin_pixbuf_new_from_file(filename);
-			g_free(filename);
-
-			gtk_menu_shell_append(GTK_MENU_SHELL(aop_menu->menu),
-				item = aop_menu_item_new(sg, pixbuf, facebook_name, "prpl-jabber", "protocol"));
-			g_object_set_data(G_OBJECT(item), "fakefacebook", GINT_TO_POINTER(1));
-
-			if (pixbuf)
-				g_object_unref(pixbuf);
-
-			/* libpurple3 compatibility */
-			if (g_strcmp0(default_proto_id, "prpl-facebook-xmpp") == 0)
-				aop_menu->default_item = i;
-
-			facebook_name = NULL;
 			i++;
 		}
 
